--- a/index.html
+++ b/index.html
@@ -1,64 +1,197 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Scrollsoundexperiment by aqilahmisuary</title>
+	<head>
+		<title>Final Scrolling: Revised</title>
+		<meta name="viewport" content="width=device-width, user-scalable=no">
+		<!-- CSS -->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+		<!-- JS Libs-->
+		<script src="js/lib/skrollr.min.js"></script>
+		<script src="js/lib/loop.js"></script>
+		<!-- JS -->
+		<script src="js/audio.js"></script>
+		<script src="js/soundloader.js"></script>
+		<script src="js/grain.js"></script>
+		<script src="js/main.js"></script>
+	</head>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Scrollsoundexperiment</h1>
-        <p>Using Ehsan Ziya&#39;s scroll sound codes to experiment</p>
+	<body>
+		<!-- elements outside the wrapper -->
+		<!-- <div id='progressValue'></div> -->
+		<div id='progressBar' data-start="width:0%" data-end="width:100%"></div>
+		<div id='description' class="text" data-anchor-target="#section1"
+		                      data-top="opacity:1; transform: translateY(0px);"
+		                      data--210p-top="opacity:0; transform: translateY(-200px);"
+							  data-emit-events>
+		<h1>Please wear headphones</h1>
+		<br>
+		<br>
+		</div>
+		<div id="loading" class='text'>Loading Assets</div>
+		<svg version="1.1" id="scrollIcon" 
+		xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+<line fill="white" stroke="white" stroke-width="10" stroke-miterlimit="10" x1="6.555" y1="44.971" x2="53.763" y2="92.179"/>
+<line fill="white" stroke="white" stroke-width="10" stroke-miterlimit="10" x1="93.764" y1="44.971" x2="46.556" y2="92.179"/>
+		</svg>
 
-        <p class="view"><a href="https://github.com/aqilahmisuary/scrollsoundexperiment">View the Project on GitHub <small>aqilahmisuary/scrollsoundexperiment</small></a></p>
+		<div id='fr1'
+		 	data-anchor-target="#section1"
+		 	data-top="opacity:0.80;transform:translateY(-0px);"
+		 	data--2550p-top="opacity:0.80;transform:translateY(-2000px)"
+		 	data--5100p-top="opacity:0;transform:translateY(-4000px);"
+		></div>
+		<div id='fr2'
+		 	data-anchor-target="#section1"
+		 	data-top="opacity:0.80;transform:translateY(-0px);"
+		 	data--2550p-top="opacity:0.80;transform:translateY(-4000px)"
+		 	data--5100p-top="opacity:0;transform:translateY(-8000px);"
+		></div>
+		<div id='back'
+		 	data-anchor-target="#section1"
+			data-top="transform: translateY(0px);"
+			data--2550p-top="opacity:1.80;transform:translateY(-1000px)"
+			data--5100p-top="opacity:0;transform:translateY(-1800px);"
+		 	data-end="transform: translateY(-2000px);"
+		></div>
 
+		<img src="assets/images/seco.png"id='seco'
+			data-top="opacity:0;"
+			data--5325p-top="opacity:0;transform:translateY(0px) rotate(0deg)"
+			data--5775p-top="opacity:1;transform:translateY(-500px) rotate(50deg)"
+			data--7125p-top="opacity:0;transform:translateY(-1500px) rotate(100deg)"
+		 	data-anchor-target="#section1"
+		></img>
 
-        <ul>
-          <li><a href="https://github.com/aqilahmisuary/scrollsoundexperiment/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/aqilahmisuary/scrollsoundexperiment/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/aqilahmisuary/scrollsoundexperiment">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+		<img src="assets/images/seco2.png"id='seco2'
+			data-top="opacity:0;"
+			data--5500p-top="opacity:0;transform:translateY(0px) rotate(0deg)"
+			data--8500p-top="opacity:1;transform:translateY(-1200px) rotate(-25deg)"
+			data--10000p-top="opacity:0;transform:translateY(-2400px) rotate(-50deg)"
+		 	data-anchor-target="#section1"
+		></img>
+		<img src="assets/images/seco3.png"id='seco3'
+			data-top="opacity:0;"
+			data--7000p-top="opacity:0;transform:translateY(0px) rotate(-10deg)"
+			data--8500p-top="opacity:0.8;transform:translateY(-1000px) rotate(-25deg)"
+			data--10000p-top="opacity:0;transform:translateY(-2000px) rotate(-80deg)"
+		 	data-anchor-target="#section1"
+		></img>
+		<div id='fr1red'
+		 	data-anchor-target="#section1"
+		 	data-top="opacity:0;transform:translateY(-0px);"
+		 	data--8625p-top="opacity:0;transform:translateY(-0px);"
+		 	data--9000p-top="opacity:1;transform:translateY(-700px)"
+		 	data--14850p-top="opacity:0;transform:translateY(-8000px);"
+		></div>
+		<div id='fr2red'
+		 	data-anchor-target="#section1"
+		 	data-top="opacity:0;transform:translateY(-0px);"
+		 	data--8625p-top="opacity:0;transform:translateY(-0px);"
+		 	data--9000p-top="opacity:1;transform:translateY(-500px)"
+		 	data--15000p-top="opacity:0;transform:translateY(-7000px);"
+		></div>
+		<!-- anchor pointed elements -->
+		<div class='text' id='firstEvent' 
+			data-anchor-target="#section1"
+			data--1200p-top
+			data--1350p-top
+			data--1500p-top
+			data--1800p-top
+			data-emit-events>
+			<h1>This Is An Event<h1>
+		</div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+		<div class='text' id='secondEvent' 
+			data-anchor-target="#section1"
+			data--1875p-top
+			data--2250p-top
+			data--2400p-top
+			data--2700p-top
+			data-emit-events>
+			<h1>This Is Also An Event<h1>
+		</div>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+		<div class='text' id='thirdEvent' 
+			data-anchor-target="#section1"
+			data--2550p-top
+			data--2925p-top
+			data--3000p-top
+			data--3150p-top
+			data-emit-events>
+			<h1>One More<h1>
+		</div>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+		<div class='text' id='forthEvent' 
+			data-anchor-target="#section1"
+			data--3300p-top
+			data--3600p-top
+			data--3750p-top
+			data--3900p-top
+			data-emit-events>
+			<h1>Last Note<h1>
+		</div>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+		<!-- RYTHM EVENTS -->
+		<div class='text' id='rhytmIndicator'
+					<h1>Rhythm Start<h1>
+		</div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+		<div class='text' id='interactive' 
+					data-anchor-target="#section1"
+					>
+					<h1>Interactive Section</h1>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+					click or touch the hexagons to trigger notes
+		</div>
+		<div class='text' id='end' 
+					data-anchor-target="#section1"
+					data-100p-bottom="opacity:0"
+					data-end="opacity:1">
+					<h1>The End</h1>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+					Have you tried scrolling back up?
+		</div>
+		<div class='text' id='panIndicator'
+			data--4500p-top="transform: translateX(0px); opacity:0"
+			data--8175p-top="transform: translateX(0px); opacity:0"
+			data--8250p-top="transform: translateX(0px); opacity:0;"
+			data--9375p-top="transform: translateX(-150px); opacity:1;"
+			data--10500p-top="transform: translateX(150px); opacity:1"
+			data--11250p-top="transform: translateX(0px); opacity:0.5"
+			data--11625p-top="transform: translateX(0px); opacity:0.0"
+            data-anchor-target="#section1"
+            data-emit-events>
+			<h1>Pan Arps: Dynamic AudioParams<h1>
+		</div>
+		<div id="hexagons" data-anchor-target="#section1"
+					data-500p-bottom="opacity:1"
+					data-200p-bottom="opacity:0">
+			<svg version="1.1" id="hexas" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="550px" height="250px" viewBox="0 0 550 250" enable-background="new 0 0 550 250" xml:space="preserve">
+<polygon class='hexa'id="hexa1"fill="#231F20" points="93.292,3.405 11.921,80.739 12.085,173.361 93.379,247.566 174.751,176.756 174.58,79.839 "/>
+<polygon class='hexa'id="hexa2"fill="#231F20" points="274.622,3.405 193.252,80.739 193.415,173.361 274.708,247.566 356.082,176.756 355.909,79.839 "/>
+<polygon class='hexa'id="hexa3"fill="#231F20" points="455.954,3.405 374.583,80.739 374.746,173.361 456.039,247.566 537.413,176.756 537.24,79.839 "/>
+</svg>
+		</div>
+		<!-- skrollr wrapper -->
+		<!-- <div id="skrollr-body"> -->
+			<!-- SECTIONS -->
+			<!-- DUMMY SECTION 1 -->
+			<div class='section' id='section1'
+				data-top=""
+				data--4500p-top
+				data--6750p-top
+				data--8250p-top
+				data--12000p-top
+				data--12150p-top
+				data-500p-bottom
+				data-top-bottom=
+				data-100p-bottom
+				data-emit-events>
+			</div>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/aqilahmisuary">aqilahmisuary</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+		<!-- </div> -->
+	</body>
 </html>
